--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -22,3 +22,34 @@
   align-items: center;
   text-align: center;
 }
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  gap: 6px;
+  margin: 16px 0;
+  list-style: none;
+  padding: 0;
+}
+
+.pagination li {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.pagination a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.active {
+  background-color: #4987a1;
+  color: white;
+  font-weight: bold;
+}
